# tep-lights

./: README.markdown  ball.py  bargraph.py  clear.py  clock.py  colortest.py  dmx.py  dmxwidget.py  flames.py  flames2.py  fluids.py  gol.py  run_module.py  runsomewidgets.py  shimmering.py  simdmx.py  snake.py  sqldb.db  stocks.py  surfball.py  surfball.pyx  text.py  tron.py
cdmx/: AUTHORS  README  mplayer.diff  projectM.diff  runner.py
cdmx/inc/: geom.h
cdmx/plugins/: Makefile  equalization.c  geomtest.c  gradient_glide.c  (+9 more)
cydmx/: Makefile  README  setup.py
inc/: geom.h
lib/: geom.c
plugins/: Makefile  circle.c  geomtest.c  shimmering.c  simpleplugin.c  sonogram-slow.c  sonogram.c  sweep.c
pydmx/: clock.py  colorblast.py  colortest.py  cycle.py  dmx.py  dmx.pyx  dmxwidget.pyx  flames2.py  fluids.py  image.py  setcolor.py  setimage.py  shimmering.pyx  snake.py  stockquote.py  surfball.py  text.py
squidnet/: README  sqldb.db
squidnetlib/: CHANGELOG  MANIFEST  setup.py
squidnetlib/sexpr_1.2/: LICENSE  config.h.in  configure.in  makefile.include.in
squidnetlib/sexpr_1.2/examples/: binmode.c  continuations.c  paultest.c
squidnetlib/sexpr_1.2/src/: parser.c
squidnetlib/sexpr_1.2/tests/: Makefile.in  ctest.c  randsexp.pl
squidweb/: context_processors.py  pydaemon.py  settings.py  updatedb.py  urls.py
src/: Makefile  audioserver  audioserver.c  audiotestserver.c  beat.h  dmx.c  dmx.h  dmxdummy.c  geom.c  ipcstructs.c  ipcstructs.h  plugin.c  plugin.h  server.c  server.h  testserver.c
templates/: 404.html  500.html  base.html  base_html.html
(+126 files in other folders)
