dnl Process this file with autoconf to produce a configure script.
AC_INIT(tests/ctorture.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(getopt.h)

dnl Checks for library functions.
AC_CHECK_FUNCS(strcpy strcmp free malloc open read close fprintf)

dnl doxygen macro 
AC_DEFUN(AC_PROG_DOXYGEN,[
test -z "$DOXYGEN" && AC_CHECK_PROGS(DOXYGEN, doxygen)
test -z "$DOXYGEN" && AC_MSG_WARN([doxygen not found in \$PATH])
])

AC_PROG_DOXYGEN

AC_CONFIG_HEADER(config.h:config.h.in)
AC_OUTPUT(Makefile makefile.include tests/Makefile examples/Makefile examples/slisp/Makefile src/Makefile)
